# reth-indexer-quickwit

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.local.yml
config/: local-quickwit-config.json
scripts/: deploy-simple.sh
src/: csv.rs  datasource.rs  datasource_factory.rs  datasource_factory.rs.example  decode_events.rs  error.rs  indexer.rs  main.rs  parquet.rs  provider.rs  quickwit.rs  rpc.rs  types.rs
test-contracts/cache/: solidity-files-cache.json
test-contracts/src/: SimpleToken.sol
